--- a/Asq-maintenance/src/main/resources/application.properties
+++ b/Asq-maintenance/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Asq-maintenance
+server-port=8081
+#Datasource Properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.show-sql=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:mysql://localhost:3306/asq_maintenance
+spring.datasource.username=root
+spring.datasource.password=Sunil250699
